--- a/themes/another/source/css/_pages/index.styl
+++ b/themes/another/source/css/_pages/index.styl
@@ -92,7 +92,7 @@
         font-weight: normal;
         font-size: 1.3rem;
         a
-          color: #011627;
+          color: #525d67;
         a:hover
           color: #2EC4B6;
     .post-cont
@@ -105,7 +105,7 @@
         margin: 0 0 8px 0;
         text-align: center;
       .text
-        color: #011627;
+        color: #525d67;
         font-size: 1rem;
         line-height: 2rem;
         overflow: hidden;
